--- a/distance_estimation.ipynb
+++ b/distance_estimation.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Even though physical distancing is defined between 2 people, robots come handy in this scenario too! Assume a cashier or a bank agent that needs the client to keep the distance of more than 6 feet to the counter. In this case a robot/robot eye that can estimate the client's distance and gives warning could come useful. Or imagine a humanoid robot that wants to keep the distance from people so that it won't carry the virus!\n",
     "\n",
-    "<img src=./images/robot.jpg>"
+    "<img src=\"./images/robot.jpg\">"
    ]
   },
   {
@@ -22,7 +22,7 @@
     "\n",
     "In this notebook we will go through human distance estimation algorithm. In this algorithm we use and combine human pose detection ([OpenPose](https://github.com/CMU-Perceptual-Computing-Lab/openpose)) and depth estimation ([DenseDepth](https://github.com/ialhashim/DenseDepth)). Here we estimate depth from RGB images without need to use depth sensors. \n",
     "\n",
-    "<img src=./images/approach.png>"
+    "<img src=\"./images/approach.png\">"
    ]
   },
   {
@@ -110,7 +110,7 @@
     "\n",
     "DenseDepth is a standard encoder-decoder architecture that leverages features extracted using high performing pre-trained networks when initializing encoder along with augmentation and training strategies that lead to more accurate results.\n",
     "\n",
-    "<img src=./images/depth.jpeg>"
+    "<img src=\"./images/depth.jpeg\">"
    ]
   },
   {
@@ -229,7 +229,7 @@
     "\n",
     "OpenPose is a real-time system that can jointly detect human body, hand, facial, and foot keypoints (in total 135 keypoints) on single images.\n",
     "\n",
-    "<img src=./images/openpose.jpeg>"
+    "<img src=\"./images/openpose.jpeg\">"
    ]
   },
   {
