added google colab compatibility

--- a/distance_estimation.ipynb
+++ b/distance_estimation.ipynb
@@ -29,14 +29,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Requirements\n",
+    "# Requirements (if running on your own system)\n",
     " - use module cuda 10.1\n",
     "\n",
     " - install cudnn 7.6.5 as described here: https://medium.com/@vitali.usau/install-cuda-10-0-cudnn-7-3-and-build-tensorflow-gpu-from-source-on-ubuntu-18-04-3daf720b83fe\n",
     "\n",
     " - install tensorflow-gpu 1.14 using pip or conda\n",
     "\n",
-    " - install keras & opencv-contrib-python using pip or conda"
+    " - install keras & opencv-contrib-python using pip or conda\n",
+    " \n",
+    "# Requirements (if running on Google Colab)\n",
+    " \n",
+    " - just run the following cell:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://github.com/dorsadadjoo/Distance_Estimation/archive/master.zip\n",
+    "!unzip master.zip \n",
+    "!mv Distance_Estimation-master/* .\n",
+    "!rm -rf Distance_Estimation-master\n",
+    "%tensorflow_version 1.x"
    ]
   },
   {
