--- a/distance_estimation.ipynb
+++ b/distance_estimation.ipynb
@@ -137,7 +137,7 @@
    "outputs": [],
    "source": [
     "# Keras / TensorFlow\n",
-    "# %tensorflow_version 1.x\n",
+    "%tensorflow_version 1.x\n",
     "from keras.models import load_model\n",
     "from layers import BilinearUpSampling2D\n",
     "from utils import predict"
